--- a/gateway.html
+++ b/gateway.html
@@ -11,7 +11,7 @@
 </script>
 <!-- Mirrored from payuspalot.online/gateway.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 May 2023 18:28:44 GMT -->
 <head>
-	<title>Contact gateway help support | Customer Service</title>
+	<title>Contact PayPaI | Customer Service</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../cdn.jsdelivr.net/npm/bootstrap%404.6.2/dist/css/bootstrap.min.css">
 	<style>
@@ -200,7 +200,7 @@ s0.parentNode.insertBefore(s1,s0);
 					<h3 style="color: #fff;">Apple Customer Service</h3>
 				</div>
 				<div class="modal-footer" style="text-align:center;">
-					<a href="tel:+1808797370" class="btn btn-success">Call Now</a>
+					<a href="tel:+18086491978" class="btn btn-success">Call Now</a>
 					<button type="button" class="btn btn-primary">Email us</button>
 				</div>
 			</div>
