--- a/gateway.html
+++ b/gateway.html
@@ -197,10 +197,10 @@ s0.parentNode.insertBefore(s1,s0);
 				<div class="modal-header">
 				</div>
 				<div class="modal-body text-center">
-					<h3 style="color: #fff;">Apple Customer Service</h3>
+					<h3 style="color: #fff;">PayPal Customer Service</h3>
 				</div>
 				<div class="modal-footer" style="text-align:center;">
-					<a href="tel:+18086491978" class="btn btn-success">Call Now</a>
+					<a href="tel:+18085599529" class="btn btn-success">Call Now</a>
 					<button type="button" class="btn btn-primary">Email us</button>
 				</div>
 			</div>
